--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -15,9 +15,11 @@
     cursor: pointer;
     width: 100px;
     color: salmon;
+    transition: background 0.3s;
+    margin: 30px;
 }
 
-.list__btn:hover {
+.btn:hover {
     color: white;
     background: salmon;
 }
